objects/Threshold_Limit__mdt.object
<CustomObject>
    <fields>
        <fullName>Lead_Enrichment__c</fullName>
        <label>Lead Enrichment Failure %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Insertion__c</fullName>
        <label>Lead Insertion Failure %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Routing__c</fullName>
        <label>Lead Routing Failure %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log_in_Attempts__c</fullName>
        <label>No of Log-in Attempts Failure</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Threshold Limit</label>
    <pluralLabel>Threshold Limit</pluralLabel>
</CustomObject>